Fix select text alignment (https://github.com/woocommerce/woocommerce-admin/pull/3723)

--- a/plugins/woocommerce-admin/client/stylesheets/shared/_global.scss
+++ b/plugins/woocommerce-admin/client/stylesheets/shared/_global.scss
@@ -146,6 +146,7 @@
 
 	select.components-select-control__input {
 		max-width: 100%;
+		line-height: 1;
 	}
 }
 
